--- a/Pear/Controllers/Chat Tab/Chat Request Table View Controller/ChatRequestsTableViewController.storyboard
+++ b/Pear/Controllers/Chat Tab/Chat Request Table View Controller/ChatRequestsTableViewController.storyboard
@@ -25,11 +25,11 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatRequestTVC" rowHeight="80" id="FWt-50-gCh" customClass="ChatRequestsTableViewCell" customModule="Pear" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatRequestTVC" rowHeight="286" id="FWt-50-gCh" customClass="ChatRequestsTableViewCell" customModule="Pear" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="286"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FWt-50-gCh" id="hl5-l8-atW">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="285.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2x8-SS-i6c">
@@ -75,7 +75,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wth-X1-IeN">
-                                                    <rect key="frame" x="260" y="52" width="92" height="196"/>
+                                                    <rect key="frame" x="260" y="52" width="92" height="192"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -87,7 +87,7 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="Hyr-kk-pvS" secondAttribute="trailing" constant="8" id="JVj-th-s7Q"/>
                                                 <constraint firstItem="Wth-X1-IeN" firstAttribute="trailing" secondItem="Hyr-kk-pvS" secondAttribute="trailing" id="LGb-Ye-VeJ"/>
                                                 <constraint firstItem="2x8-SS-i6c" firstAttribute="top" secondItem="hl5-l8-atW" secondAttribute="topMargin" constant="8" id="cA8-hg-BD0"/>
-                                                <constraint firstItem="Wth-X1-IeN" firstAttribute="bottom" secondItem="2x8-SS-i6c" secondAttribute="bottom" id="cmF-5i-if4"/>
+                                                <constraint firstItem="Wth-X1-IeN" firstAttribute="bottom" secondItem="2x8-SS-i6c" secondAttribute="bottom" constant="-4" id="cmF-5i-if4"/>
                                                 <constraint firstItem="3fk-UC-s4l" firstAttribute="leading" secondItem="2x8-SS-i6c" secondAttribute="trailing" constant="12" id="m1e-fb-g2v"/>
                                                 <constraint firstItem="Wth-X1-IeN" firstAttribute="top" secondItem="3fk-UC-s4l" secondAttribute="bottom" constant="8" id="mCw-9h-gpX"/>
                                                 <constraint firstItem="Hyr-kk-pvS" firstAttribute="centerY" secondItem="3fk-UC-s4l" secondAttribute="centerY" id="mIh-4Z-vfs"/>
