--- a/Pear/Controllers/Chat Tab/Main Chat VC/ChatMainViewController.storyboard
+++ b/Pear/Controllers/Chat Tab/Main Chat VC/ChatMainViewController.storyboard
@@ -21,7 +21,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P0j-nz-OnO" userLabel="Header Container">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tab-icon-chat" translatesAutoresizingMaskIntoConstraints="NO" id="nRR-1g-7D1" userLabel="Center Icon">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tab-icon-chat-selected" translatesAutoresizingMaskIntoConstraints="NO" id="nRR-1g-7D1" userLabel="Center Icon">
                                         <rect key="frame" x="167.5" y="5" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="nRR-1g-7D1" secondAttribute="height" multiplier="1:1" id="1Oj-79-swW"/>
@@ -62,24 +62,34 @@
                                             <constraint firstAttribute="height" constant="1" id="c0a-yD-w8v"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yYc-Fw-Ahx">
+                                        <rect key="frame" x="187" y="1" width="1" height="48"/>
+                                        <color key="backgroundColor" white="0.96999999999999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="haE-Xm-g2h"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="Tfq-8I-4T5" firstAttribute="centerY" secondItem="PGt-Xw-Rpv" secondAttribute="centerY" id="2pj-Oc-SgW"/>
                                     <constraint firstItem="Tfq-8I-4T5" firstAttribute="height" secondItem="PGt-Xw-Rpv" secondAttribute="height" id="4wX-A9-JBb"/>
+                                    <constraint firstItem="yYc-Fw-Ahx" firstAttribute="centerY" secondItem="PGt-Xw-Rpv" secondAttribute="centerY" id="Dbg-Xl-RZ8"/>
                                     <constraint firstItem="zdR-dh-ge0" firstAttribute="centerY" secondItem="PGt-Xw-Rpv" secondAttribute="centerY" id="Rhk-ck-tFN"/>
+                                    <constraint firstItem="yYc-Fw-Ahx" firstAttribute="centerX" secondItem="PGt-Xw-Rpv" secondAttribute="centerX" id="Vbi-dV-FhI"/>
                                     <constraint firstItem="Tfq-8I-4T5" firstAttribute="leading" secondItem="zdR-dh-ge0" secondAttribute="trailing" id="W56-0P-zVn"/>
                                     <constraint firstAttribute="trailing" secondItem="e8E-EA-7L2" secondAttribute="trailing" id="WUI-Oy-kvj"/>
                                     <constraint firstAttribute="height" constant="50" id="bMd-Ra-SNX"/>
                                     <constraint firstItem="zdR-dh-ge0" firstAttribute="height" secondItem="PGt-Xw-Rpv" secondAttribute="height" id="gBE-6U-dDy"/>
                                     <constraint firstItem="Tfq-8I-4T5" firstAttribute="width" secondItem="zdR-dh-ge0" secondAttribute="width" id="ghr-N1-vva"/>
+                                    <constraint firstItem="yYc-Fw-Ahx" firstAttribute="height" secondItem="PGt-Xw-Rpv" secondAttribute="height" constant="-2" id="n1D-78-X1Q"/>
                                     <constraint firstItem="e8E-EA-7L2" firstAttribute="leading" secondItem="PGt-Xw-Rpv" secondAttribute="leading" id="ouV-mn-RRU"/>
                                     <constraint firstAttribute="bottom" secondItem="e8E-EA-7L2" secondAttribute="bottom" id="q9Z-Rd-zy0"/>
                                     <constraint firstItem="zdR-dh-ge0" firstAttribute="leading" secondItem="PGt-Xw-Rpv" secondAttribute="leading" id="xct-S2-m0l"/>
                                     <constraint firstAttribute="trailing" secondItem="Tfq-8I-4T5" secondAttribute="trailing" id="yXX-8f-pjx"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0qc-zU-5Si">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0qc-zU-5Si">
                                 <rect key="frame" x="0.0" y="120" width="375" height="547"/>
                             </scrollView>
                         </subviews>
@@ -110,6 +120,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tab-icon-chat" width="500" height="500"/>
+        <image name="tab-icon-chat-selected" width="500" height="500"/>
     </resources>
 </document>
