--- a/Pear/Controllers/New Redesign/Create User/UserContactPermissionsViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/UserContactPermissionsViewController.storyboard
@@ -92,46 +92,58 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="112.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pTM-H8-3RB">
-                                                            <rect key="frame" x="4" y="4" width="50" height="50"/>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JTl-ny-pOB">
+                                                            <rect key="frame" x="0.0" y="4" width="374" height="104.5"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pTM-H8-3RB">
+                                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="50" id="Pbt-9o-DMU"/>
+                                                                        <constraint firstAttribute="width" secondItem="pTM-H8-3RB" secondAttribute="height" multiplier="1:1" id="q4L-re-qws"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8l-PG-huu">
+                                                                    <rect key="frame" x="66" y="12" width="38" height="19.5"/>
+                                                                    <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcN-I4-I4Y">
+                                                                    <rect key="frame" x="322.5" y="11" width="43.5" height="22"/>
+                                                                    <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
+                                                                    <color key="textColor" white="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fxa-xs-sRP">
+                                                                    <rect key="frame" x="66" y="45" width="300" height="51.5"/>
+                                                                    <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
+                                                                    <color key="textColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="50" id="Pbt-9o-DMU"/>
-                                                                <constraint firstAttribute="width" secondItem="pTM-H8-3RB" secondAttribute="height" multiplier="1:1" id="q4L-re-qws"/>
+                                                                <constraint firstItem="k8l-PG-huu" firstAttribute="top" secondItem="JTl-ny-pOB" secondAttribute="top" constant="12" id="6vd-IF-UrR"/>
+                                                                <constraint firstItem="pTM-H8-3RB" firstAttribute="top" secondItem="JTl-ny-pOB" secondAttribute="top" constant="8" id="9Tp-V5-Efr"/>
+                                                                <constraint firstItem="Fxa-xs-sRP" firstAttribute="top" secondItem="XcN-I4-I4Y" secondAttribute="bottom" constant="12" id="CqV-tQ-QRY"/>
+                                                                <constraint firstItem="pTM-H8-3RB" firstAttribute="leading" secondItem="JTl-ny-pOB" secondAttribute="leading" constant="8" id="Eyk-h0-Nnq"/>
+                                                                <constraint firstAttribute="trailing" secondItem="XcN-I4-I4Y" secondAttribute="trailing" constant="8" id="Jkv-m3-DlR"/>
+                                                                <constraint firstAttribute="bottom" secondItem="Fxa-xs-sRP" secondAttribute="bottom" constant="8" id="fkJ-rp-FJ0"/>
+                                                                <constraint firstItem="k8l-PG-huu" firstAttribute="centerY" secondItem="XcN-I4-I4Y" secondAttribute="centerY" id="gGc-jh-kiF"/>
+                                                                <constraint firstItem="Fxa-xs-sRP" firstAttribute="trailing" secondItem="XcN-I4-I4Y" secondAttribute="trailing" id="hgM-uH-Sp4"/>
+                                                                <constraint firstItem="Fxa-xs-sRP" firstAttribute="leading" secondItem="k8l-PG-huu" secondAttribute="leading" id="iab-nP-UDx"/>
+                                                                <constraint firstItem="k8l-PG-huu" firstAttribute="leading" secondItem="pTM-H8-3RB" secondAttribute="trailing" constant="8" id="sN4-0L-lse"/>
                                                             </constraints>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8l-PG-huu">
-                                                            <rect key="frame" x="62" y="5.5" width="38" height="19.5"/>
-                                                            <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcN-I4-I4Y">
-                                                            <rect key="frame" x="326.5" y="4" width="43.5" height="22"/>
-                                                            <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
-                                                            <color key="textColor" white="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fxa-xs-sRP">
-                                                            <rect key="frame" x="62" y="33" width="284" height="57"/>
-                                                            <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
-                                                            <color key="textColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        </view>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="XcN-I4-I4Y" secondAttribute="trailing" constant="4" id="1gQ-sc-N2k"/>
-                                                        <constraint firstItem="k8l-PG-huu" firstAttribute="centerY" secondItem="XcN-I4-I4Y" secondAttribute="centerY" id="A0j-Dh-OZV"/>
-                                                        <constraint firstItem="pTM-H8-3RB" firstAttribute="top" secondItem="hYA-vY-w4e" secondAttribute="top" constant="4" id="DGX-Dh-gqB"/>
-                                                        <constraint firstAttribute="trailingMargin" secondItem="Fxa-xs-sRP" secondAttribute="trailing" constant="8" id="HWC-5m-GZg"/>
-                                                        <constraint firstItem="Fxa-xs-sRP" firstAttribute="top" secondItem="k8l-PG-huu" secondAttribute="bottom" constant="8" id="XUu-Eo-bHB"/>
-                                                        <constraint firstItem="k8l-PG-huu" firstAttribute="leading" secondItem="pTM-H8-3RB" secondAttribute="trailing" constant="8" id="oig-3O-chA"/>
-                                                        <constraint firstItem="Fxa-xs-sRP" firstAttribute="leading" secondItem="k8l-PG-huu" secondAttribute="leading" id="qpO-eN-Jx0"/>
-                                                        <constraint firstItem="XcN-I4-I4Y" firstAttribute="top" secondItem="hYA-vY-w4e" secondAttribute="top" constant="4" id="rBX-Sj-59r"/>
-                                                        <constraint firstAttribute="bottomMargin" secondItem="Fxa-xs-sRP" secondAttribute="bottom" constant="12" id="vMA-YK-NII"/>
-                                                        <constraint firstItem="pTM-H8-3RB" firstAttribute="leading" secondItem="hYA-vY-w4e" secondAttribute="leading" constant="4" id="yww-hh-EGb"/>
+                                                        <constraint firstItem="JTl-ny-pOB" firstAttribute="leading" secondItem="hYA-vY-w4e" secondAttribute="leading" id="At5-14-e2L"/>
+                                                        <constraint firstItem="JTl-ny-pOB" firstAttribute="top" secondItem="hYA-vY-w4e" secondAttribute="top" constant="4" id="i2Y-dc-UBj"/>
+                                                        <constraint firstAttribute="bottom" secondItem="JTl-ny-pOB" secondAttribute="bottom" constant="4" id="mHE-na-dxr"/>
+                                                        <constraint firstAttribute="trailing" secondItem="JTl-ny-pOB" secondAttribute="trailing" id="qTE-PZ-43a"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
+                                                    <outlet property="containerView" destination="JTl-ny-pOB" id="BJy-Pa-iqc"/>
                                                     <outlet property="contentLabel" destination="Fxa-xs-sRP" id="bEK-i6-a4E"/>
                                                     <outlet property="roastBoastImage" destination="pTM-H8-3RB" id="CbL-QS-DMp"/>
                                                     <outlet property="timestampLabel" destination="XcN-I4-I4Y" id="rKI-8P-NAf"/>
@@ -189,6 +201,8 @@
                     <connections>
                         <outlet property="enableContactsButton" destination="RaF-Ys-2WK" id="CBE-Sp-STZ"/>
                         <outlet property="numberProfilesLabel" destination="8bX-ac-HTa" id="qQL-fe-uRr"/>
+                        <outlet property="tableView" destination="nrj-hZ-Nj2" id="c5J-wX-z4U"/>
+                        <outlet property="tableViewContainerView" destination="7Pp-0I-vb7" id="jQr-S3-vbr"/>
                         <outlet property="titleLabel" destination="egO-Y0-AmT" id="Wle-hg-Mwh"/>
                     </connections>
                 </viewController>
