--- a/Pear/Controllers/Onboarding/Onboarding Explaination Pages/Page 1/OnboardingExplainationPage1ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Onboarding Explaination Pages/Page 1/OnboardingExplainationPage1ViewController.storyboard
@@ -37,10 +37,10 @@
                                     <action selector="continueButtonClicked:" destination="mJ8-wo-IG8" eventType="touchUpInside" id="MQa-ni-0D0"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="onboarding-meme-1" translatesAutoresizingMaskIntoConstraints="NO" id="L3Q-s1-RX1">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" ambiguous="YES" image="onboarding-meme-1" translatesAutoresizingMaskIntoConstraints="NO" id="L3Q-s1-RX1">
                                 <rect key="frame" x="20" y="138.66666666666669" width="335" height="543.33333333333326"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="On Pear, every profile is  written by friends." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="he2-Fq-k2b">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="On Pear, friends answer prompts that are more fun and authentic" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="he2-Fq-k2b">
                                 <rect key="frame" x="30" y="64" width="315" height="54.666666666666657"/>
                                 <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="20"/>
                                 <nil key="textColor"/>
@@ -74,7 +74,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-meme-1" width="1029" height="1323"/>
+        <image name="onboarding-meme-1" width="343" height="441"/>
         <namedColor name="primaryBrandColor">
             <color red="0.29411764705882354" green="0.86274509803921573" blue="0.52156862745098043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
