--- a/Pear/Controllers/Onboarding/Onboarding Explaination Pages/Page 2/OnboardingExplainationPage2ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Onboarding Explaination Pages/Page 2/OnboardingExplainationPage2ViewController.storyboard
@@ -37,11 +37,11 @@
                                     <action selector="continueButtonClicked:" destination="mJ8-wo-IG8" eventType="touchUpInside" id="KgU-4V-z4n"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="onboarding-meme-2" translatesAutoresizingMaskIntoConstraints="NO" id="L3Q-s1-RX1">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" ambiguous="YES" image="onboarding-meme-3" translatesAutoresizingMaskIntoConstraints="NO" id="L3Q-s1-RX1">
                                 <rect key="frame" x="20" y="111.33333333333331" width="335" height="570.66666666666674"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="After all, it takes a village." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="he2-Fq-k2b">
-                                <rect key="frame" x="30" y="64" width="315" height="27.333333333333329"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Turns out, friends usually know us better than we know ourselves" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="he2-Fq-k2b">
+                                <rect key="frame" x="30" y="64" width="315" height="28"/>
                                 <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -74,7 +74,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-meme-2" width="1029" height="1323"/>
+        <image name="onboarding-meme-3" width="359" height="363"/>
         <namedColor name="primaryBrandColor">
             <color red="0.29411764705882354" green="0.86274509803921573" blue="0.52156862745098043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
