--- a/Pear/Controllers/Discovery Flow/Discovery Full Profile View/Matchmaker Full Profile/DiscoveryMatchmakerFullProfileViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Discovery Full Profile View/Matchmaker Full Profile/DiscoveryMatchmakerFullProfileViewController.storyboard
@@ -22,8 +22,12 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fx-KX-d4V">
-                                <rect key="frame" x="15" y="765.5" width="66.5" height="66.5"/>
+                                <rect key="frame" x="15" y="772" width="60" height="60"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="2fx-KX-d4V" secondAttribute="height" multiplier="1:1" id="4U0-fp-XxP"/>
+                                    <constraint firstAttribute="width" constant="60" id="x9e-PN-d9E"/>
+                                </constraints>
                                 <state key="normal" image="discovery-icon-skip"/>
                                 <connections>
                                     <action selector="skipProfileButtonClicked:" destination="TNO-aO-KSh" eventType="touchUpInside" id="d1m-bN-lec"/>
