--- a/Pear/Controllers/Discovery Flow/Discovery Full Profile View/Personal Full Profile/DiscoveryPersonalFullProfileViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Discovery Full Profile View/Personal Full Profile/DiscoveryPersonalFullProfileViewController.storyboard
@@ -22,8 +22,12 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cKO-oX-CoF">
-                                <rect key="frame" x="15" y="765.5" width="66.5" height="66.5"/>
+                                <rect key="frame" x="15" y="772" width="60" height="60"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="Pdu-oa-X3v"/>
+                                    <constraint firstAttribute="width" secondItem="cKO-oX-CoF" secondAttribute="height" multiplier="1:1" id="x2E-vE-kck"/>
+                                </constraints>
                                 <state key="normal" image="discovery-icon-skip"/>
                                 <connections>
                                     <action selector="skipProfileButtonClicked:" destination="tEA-sR-VgR" eventType="touchUpInside" id="ndc-7v-3Q9"/>
